--- a/src/TodoList.css
+++ b/src/TodoList.css
@@ -1,55 +1,77 @@
+.dateAndTime {
+  display: inline-block;
+  border: 4px solid orange;
+  border-left: none;
+  border-radius: 0 30px 30px 0;
+  padding: 10px 0;
+  width: 300px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.dateAndTime h2 {
+  padding: 0;
+  margin: 0;
+}
+
 .todoListMain .header input {
-    padding: 10px;
-    font-size: 16px;
-    border: 2px solid #FFF;
-    width: 165px;
-  }
+  padding: 10px;
+  font-size: 16px;
+  border: 2px solid #FFF;
+  width: 165px;
+  margin: 20px;
+  border-radius: 10px;
+  outline: none;
+}
   
-  .todoListMain .header button {
-    padding: 10px;
-    font-size: 16px;
-    margin: 10px;
-    margin-right: 0px;
-    background-color: #0066FF;
-    color: #FFF;
-    border: 2px solid #0066FF;
-  }
-  
-  .todoListMain .header button:hover {
-    background-color: #003399;
-    border: 2px solid #003399;
-    cursor: pointer;
-  }
+.todoListMain .header button {
+  padding: 10px;
+  font-size: 16px;
+  margin: 10px;
+  margin-right: 0px;
+  background-color: orange;
+  color: #FFF;
+  border: 2px solid orange;
+  border-radius: 10px;
+  outline: none;
+}
 
-  .todoListMain .theList {
-    list-style: none;
-    padding-left: 0;
-    width: 250px;
-  } 
-  
-  .todoListMain .theList li {
-    color: #333;
-    background-color: rgba(255,255,255,.5);
-    padding: 15px;
-    margin-bottom: 15px;
-    border-radius: 5px;
-    list-style: none;
-  }
-  
-  ul.theList {
-    padding: 0;
-  }
+.todoListMain .header button:hover {
+  background-color: darkorange;
+  border: 2px solid darkorange;
+  cursor: pointer;
+}
 
-  .todoListMain .theList li {
-    color: #333;
-    background-color: rgba(255,255,255,.5);
-    padding: 15px;
-    margin-bottom: 15px;
-    border-radius: 5px;
-    transition: background-color .2s ease-out;
-  }
-   
-  .todoListMain .theList li:hover {
-    background-color: pink;
-    cursor: pointer;
-  }
+.todoListMain .theList {
+  list-style: none;
+  padding-left: 0;
+  width: 250px;
+} 
+
+.todoListMain .theList li {
+  color: black;
+  background-color: white;
+  padding: 15px;
+  margin-bottom: 15px;
+  border-radius: 10px;
+  list-style: none;
+}
+
+ul.theList {
+  padding: 0;
+}
+
+.todoListMain .theList li {
+  color: black;
+  background-color: white;
+  padding: 15px;
+  margin-bottom: 15px;
+  margin-left: 20px;
+  border-radius: 5px;
+  transition: background-color .2s ease-out;
+}
+  
+.todoListMain .theList li:hover {
+  background-color: orange;
+  cursor: pointer;
+}
