--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,6 @@
 body {
-    padding: 50px;
-    background-color: #66CCFF;
     font-family: sans-serif;
-}
-
-#container {
-    display: flex;
-    justify-content: center;
+    color: white;
+    margin: 0;
+    background-color: #000;
 }
